k8s/micro_boton.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: micro-boton-deployment
  namespace: jenkins
spec:
  selector:
    matchLabels:
      app: micro-boton
  replicas: 1
  template:
    metadata:
      labels:
        app: micro-boton
    spec:
      containers:
        - name: micro-boton
          image: danny44/micro-boton:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: servicio-boton-clusterip
  namespace: jenkins
spec:
  ports:
    - protocol: "TCP"
      port: 8081        # The port inside the cluster
      targetPort: 8080  # The port exposed by the service
  type: ClusterIP       # Type of service
  selector:
    app: micro-boton
